--- a/u.html
+++ b/u.html
@@ -7,9 +7,9 @@
 
 <body>
 
-        <iframe src="/atopo.html" width="50%" height="100%" align="left"> </iframe>
+        <iframe src="/atopo.html" position="absolute" width="50%" height="100%" align="left"> </iframe>
 
-        <iframe src="/potoa.html" width="50%" height="100%" align="right"></iframe>
+        <iframe src="/potoa.html" position="absolute" width="50%" height="100%" align="right"></iframe>
 
 </body>
 
