--- a/u.html
+++ b/u.html
@@ -3,13 +3,20 @@
 
 <head>
     <meta charset="utf-8">
+    <style>
+        html,
+        body {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body>
 
-        <iframe src="/atopo.html" position="absolute" width="50%" height="100%" align="left"> </iframe>
+    <iframe src="/atopo.html" style="overflow: hidden; height: 100%; width: 49%; float: left; display: inline-flex;"> </iframe>
 
-        <iframe src="/potoa.html" position="absolute" width="50%" height="100%" align="right"></iframe>
+    <iframe src="/potoa.html" style="overflow: hidden; height: 100%; width: 49%; float: right; display: inline-flex;"></iframe>
 
 </body>
 
