--- a/potoa.html
+++ b/potoa.html
@@ -14,35 +14,20 @@
             const len = arr.length - (flag ? 1 : 0);
             let data = new Uint8Array(len * 2)
             document.getElementById('text').innerHTML = ""
-            for (var i = 0; i < len; i++) {
-                await fetch("/data/" + arr[i][0] + "/" + arr[i][1] + "/" + arr[i] + ".txt")
-                    .then(response => {
-                        if (!response.ok) {
-                            return Promise.reject(response);
-                        }
-                        return response;
+            let all_data = JSON.parse("");
+            await fetch("map.json")
+                .then(response => {
+                    if (!response.ok) {
+                        return Promise.reject(response);
                     }
-                    )
-                    .then(a => a.text())
-                    .then(a => 0 + a)
-                    .then(a => { data[i * 2] = a >> 8; data[i * 2 + 1] = a & 0xFF;})
-                    .catch(error => {
-                        if (typeof error.json === "function") {
-                            error.json().then(jsonError => {
-                                document.getElementById('text').innerHTML += arr[i] + "<br>";
-                                document.getElementById('text').innerHTML += ("Json error from API<br>");
-                                document.getElementById('text').innerHTML += (jsonError);
-                            }).catch(genericError => {
-                                document.getElementById('text').innerHTML += arr[i] + "<br>";
-                                document.getElementById('text').innerHTML += ("Generic error from API");
-                                document.getElementById('text').innerHTML += (error.statusText);
-                            });
-                        } else {
-                            document.getElementById('text').innerHTML += arr[i] + "<br>";
-                            document.getElementById('text').innerHTML += ("Fetch error");
-                            document.getElementById('text').innerHTML += (error);
-                        }
-                    });
+                    return response;
+                }
+                )
+                .then(a => a.json())
+                .then(a => all_data = a);
+            for (var i = 0; i < len; i++) {
+                data[i * 2] = all_data[arr[i]] >> 8;
+                data[i * 2 + 1] = all_data[arr[i]] & 0x0F;
             }
             if (flag) data = data.slice(0, len * 2 - 1);
             const decoder = new TextDecoder();
