--- a/atopo.html
+++ b/atopo.html
@@ -4,6 +4,13 @@
 <head>
     <meta charset="utf-8">
     <script>
+        var all_data;
+        document.body.onload = function()
+        {
+            document.body.style.visibility = "hidden";
+            window.all_data = await (await fetch('arr.json')).json();
+            document.body.style.visibility = "visible";
+        }
         async function btn() {
             const encoder = new TextEncoder()
             view = encoder.encode(document.getElementById('data').value)
@@ -18,10 +25,9 @@
             }
             let pad_view = concatTypedArrays(view, padarr)
             let str_arr = new Array(Math.round(pad_view.length/2))
-            var all_data = await (await fetch('arr.json')).json();
             document.getElementById('text').innerHTML = ""
             for (var i = 0; i < pad_view.length; i += 2) {
-                str_arr[Math.round(i/2)] = all_data[i] + "。";
+                str_arr[Math.round(i/2)] = window.all_data[i] + "。";
             }
             document.getElementById('text').innerHTML = str_arr.join("<br />");
             if(flag)
