--- a/atopo.html
+++ b/atopo.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <script>
         var all_data;
-        document.body.onload = function()
+        document.body.onload = function f()
         {
             document.body.style.visibility = "hidden";
             window.all_data = await (await fetch('arr.json')).json();
