--- a/atopo.html
+++ b/atopo.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <script>
         var all_data;
-        document.body.onload = function f()
+        async function f()
         {
             document.body.style.visibility = "hidden";
             window.all_data = await (await fetch('arr.json')).json();
@@ -46,6 +46,9 @@
     <input type="text" id="data" name="data">
     <button id="btn">Try it</button>
     <script>
+        document.body.onload = async ()=>{
+        await f();
+    }
         document.getElementById("btn").onclick=async ()=>{
         await btn();
     }
